Fixed naming issues , spacing issues and added  more paramters

--- a/server/config/app.json
+++ b/server/config/app.json
@@ -19,7 +19,7 @@
     },
     "adapterTypes": [
         {
-            "name": "MySQL Data Adapter",
+            "name": "MSSQL Data Adapter",
             "invariantName": "mssql",
             "type": "@themost/mssql"
         }
