--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@themost/common": "^2.3.1",
     "@themost/data": "^2.3.1",
     "@themost/express": "^1.3.3",
+    "@themost/mssql": "^2.2.2",
     "@themost/node": "^2.1.1",
     "@themost/query": "^2.3.1",
     "@themost/sqlite": "^2.2.1",
@@ -56,6 +57,8 @@
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
+    "moment": "^2.24.0",
+    "moment-weekday-calc": "^1.1.4",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
